# game-of-life

./: .gitignore  README.md  game.py  pyproject.toml
Python/: README.md  game.py
examples/: glider  heavy-weight-spaceship  light-weight-spaceship  middle-weight-spaceship  pulsar  simkin_glider_gun
