[tool.poetry]
name = "Game of Life"
version = "0.1.0"
description = "The Python Implementation for the Game of Life."
authors = ["Pagliacii <huangmianrui0310@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
